coding python.txt
Python 3.8.2 (tags/v3.8.2:7b3ab59, Feb 25 2020, 22:45:29) [MSC v.1916 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> # infludiamo questo modulo per creare numeri casuali
>>> from random import randint
>>>
>>> # per accedere ad un file devo assegnare
>>> # ad un oggetto il file da aprire, in lettura o scrittura
>>>
>>> # associo ad f il file, indico con "w" il tipo di operazione
>>> # così lo aprirà in scrittura (write)
>>>
>>> f = open("dati4.txt", 'w')
>>>
>>> # definiamo una variabile stringa da riempire con i dati che poi scriverò
>>>
>>> # inizializzo la stringa
>>> dati = ""
>>>
>>> # il primo ciclo serve a creare le singole righe
>>> for riga in range(10):
...
  File "<stdin>", line 2

    ^
IndentationError: expected an indented block
>>>     # il secondo ciclo serve a compulare la singola riga
>>>     for elemento in range(1):
  File "<stdin>", line 1
    for elemento in range(1):
    ^
IndentationError: unexpected indent
>>>
>>>         # aggiungo il numero casuale e inserisco uno spazio in coda
>>>         dati = dati + str(randint(1,100)) + "," + str(randint(1,100))
  File "<stdin>", line 1
    dati = dati + str(randint(1,100)) + "," + str(randint(1,100))
    ^
IndentationError: unexpected indent
>>>
>>>     # aggiungo un terminatore di riga, così il secondo rigo va a capo
>>>     dati = dati + "\n"
  File "<stdin>", line 1
    dati = dati + "\n"
    ^
IndentationError: unexpected indent
>>>
>>> # avremmmo potuto creare una lista di righe:
>>> # lines = [
>>> #...     'prima riga del file\n',
>>> #...     'seconda riga del file\n',
>>> #...     'terza riga del file\n',
>>> #... ]
>>>
>>> print(dati)

>>>
>>> # scrivo la stringa nel file
>>> f.write(dati)
0
>>>
>>> # chdiuamo sempre il file
>>> f.close(100)




